# prod-trading-bot

./: .env  Cargo.toml
src/: main.rs
src/api/: client.rs
src/trading/: strategy.rs
