[package]
name = "survival-trading-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
ethers = "2.0"
actix-web = "4.5"
chrono = "0.4"
log = "0.4"
env_logger = "0.11"
rust_decimal = "1.34"
rust_decimal_macros = "1.34"
async-trait = "0.1"
futures = "0.3"
hyperliquid = { git = "https://github.com/lhermoso/hyperliquid-rust-sdk" }